--- a/RoutePro/Base.lproj/Main.storyboard
+++ b/RoutePro/Base.lproj/Main.storyboard
@@ -164,7 +164,18 @@
                             <constraint firstItem="bmI-rl-Jgq" firstAttribute="top" secondItem="BiD-rF-N1J" secondAttribute="bottom" id="Zdu-3F-GLc"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="9wF-bX-EGq"/>
+                    <navigationItem key="navigationItem" id="9wF-bX-EGq">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="dXk-Yo-Ohu">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="eZO-Wq-7ga">
+                                <rect key="frame" x="516" y="-10" width="64" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="logout"/>
+                                <connections>
+                                    <action selector="logout:" destination="WrR-BZ-CCV" eventType="touchUpInside" id="J70-SX-8LL"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tripTableView" destination="BiD-rF-N1J" id="YJd-nA-XD3"/>
                         <segue destination="T9a-wC-8T8" kind="show" identifier="locationSegue" id="WZJ-1E-8nL"/>
@@ -313,11 +324,160 @@
                     </view>
                     <connections>
                         <outlet property="locationTableView" destination="ly3-Uz-Og9" id="S8y-es-oql"/>
+                        <segue destination="mQZ-Mg-ywX" kind="show" identifier="signatureSegue" id="WQ2-fz-4lm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ODC-ZN-g8U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2570" y="382"/>
+        </scene>
+        <!--Signature View Controller-->
+        <scene sceneID="cVV-la-XjT">
+            <objects>
+                <viewController id="mQZ-Mg-ywX" customClass="SignatureViewController" customModule="RoutePro" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KOP-8l-Odl"/>
+                        <viewControllerLayoutGuide type="bottom" id="nAF-jW-Rb4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ofG-LG-hEs">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PZf-fG-uNf">
+                                <rect key="frame" x="20" y="109" width="560" height="48"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Selecciona un Resultado" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e4M-xq-ail">
+                                        <rect key="frame" x="112" y="8" width="440" height="33"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Resultado:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zXS-M0-6px">
+                                        <rect key="frame" x="5" y="12" width="99" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="99" id="xVO-p2-LzL"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="zXS-M0-6px" firstAttribute="top" secondItem="PZf-fG-uNf" secondAttribute="top" constant="12" id="DeI-tM-rgj"/>
+                                    <constraint firstItem="e4M-xq-ail" firstAttribute="leading" secondItem="zXS-M0-6px" secondAttribute="trailing" constant="8" id="EfS-ua-Z8c"/>
+                                    <constraint firstAttribute="trailing" secondItem="e4M-xq-ail" secondAttribute="trailing" constant="8" id="GxF-6C-llY"/>
+                                    <constraint firstAttribute="bottom" secondItem="zXS-M0-6px" secondAttribute="bottom" constant="12" id="ZpQ-tp-28f"/>
+                                    <constraint firstItem="zXS-M0-6px" firstAttribute="leading" secondItem="PZf-fG-uNf" secondAttribute="leading" constant="5" id="huR-Ax-E3d"/>
+                                    <constraint firstItem="e4M-xq-ail" firstAttribute="top" secondItem="PZf-fG-uNf" secondAttribute="top" constant="8" id="vPz-mr-j9r"/>
+                                    <constraint firstAttribute="bottom" secondItem="e4M-xq-ail" secondAttribute="bottom" constant="7" id="xcc-wk-3jL"/>
+                                    <constraint firstItem="e4M-xq-ail" firstAttribute="leading" secondItem="zXS-M0-6px" secondAttribute="trailing" constant="8" id="z2C-Hu-NDm"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F2D-fk-8Am">
+                                <rect key="frame" x="20" y="177" width="560" height="56"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Detalles:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UIl-In-DWQ">
+                                        <rect key="frame" x="6" y="15" width="85" height="27"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="85" id="tx5-U5-gRe"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Agregue los detalles" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TBm-Pz-56G">
+                                        <rect key="frame" x="94" y="15" width="458" height="33"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="TBm-Pz-56G" firstAttribute="leading" secondItem="UIl-In-DWQ" secondAttribute="trailing" constant="3" id="0Q8-pc-bw3"/>
+                                    <constraint firstItem="UIl-In-DWQ" firstAttribute="top" secondItem="F2D-fk-8Am" secondAttribute="top" constant="15" id="3LE-lp-0GA"/>
+                                    <constraint firstAttribute="bottom" secondItem="TBm-Pz-56G" secondAttribute="bottom" constant="2" id="C2F-H4-yZj"/>
+                                    <constraint firstItem="UIl-In-DWQ" firstAttribute="leading" secondItem="F2D-fk-8Am" secondAttribute="leading" constant="6" id="GuL-Lj-IW0"/>
+                                    <constraint firstAttribute="bottom" secondItem="UIl-In-DWQ" secondAttribute="bottom" constant="14" id="Pvn-BI-J32"/>
+                                    <constraint firstItem="TBm-Pz-56G" firstAttribute="top" secondItem="F2D-fk-8Am" secondAttribute="top" constant="15" id="XIA-Ot-K7q"/>
+                                    <constraint firstAttribute="bottom" secondItem="TBm-Pz-56G" secondAttribute="bottom" constant="8" id="Ywe-39-TtV"/>
+                                    <constraint firstAttribute="bottom" secondItem="TBm-Pz-56G" secondAttribute="bottom" constant="6" id="hmo-xp-vn4"/>
+                                    <constraint firstAttribute="trailing" secondItem="TBm-Pz-56G" secondAttribute="trailing" constant="8" id="rcH-4F-Q8l"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="C2F-H4-yZj"/>
+                                        <exclude reference="hmo-xp-vn4"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WHl-b4-IN2">
+                                <rect key="frame" x="267" y="502" width="67" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="67" id="ZVH-me-5YX"/>
+                                    <constraint firstAttribute="height" constant="30" id="zDg-MZ-jY3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <state key="normal" title="Enviar"/>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="44Y-Cb-R2b">
+                                <rect key="frame" x="20" y="253" width="560" height="229"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Comentarios:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NuH-Vt-S2a">
+                                        <rect key="frame" x="8" y="8" width="132" height="27"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="132" id="9As-lM-tTq"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Jsh-AL-0Ex">
+                                        <rect key="frame" x="8" y="43" width="544" height="178"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="0.19557883522727273" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="Jsh-AL-0Ex" firstAttribute="leading" secondItem="44Y-Cb-R2b" secondAttribute="leading" constant="8" id="8vj-5I-5wC"/>
+                                    <constraint firstItem="Jsh-AL-0Ex" firstAttribute="top" secondItem="NuH-Vt-S2a" secondAttribute="bottom" constant="8" id="AC7-aD-zdT"/>
+                                    <constraint firstItem="NuH-Vt-S2a" firstAttribute="top" secondItem="44Y-Cb-R2b" secondAttribute="top" constant="8" id="EKA-K8-ETW"/>
+                                    <constraint firstAttribute="bottom" secondItem="Jsh-AL-0Ex" secondAttribute="bottom" constant="8" id="K4l-NE-SQa"/>
+                                    <constraint firstItem="Jsh-AL-0Ex" firstAttribute="top" secondItem="NuH-Vt-S2a" secondAttribute="bottom" constant="8" id="PhC-JU-D4a"/>
+                                    <constraint firstAttribute="trailing" secondItem="Jsh-AL-0Ex" secondAttribute="trailing" constant="8" id="h4Z-sW-s3I"/>
+                                    <constraint firstItem="NuH-Vt-S2a" firstAttribute="leading" secondItem="44Y-Cb-R2b" secondAttribute="leading" constant="8" id="yE0-aM-6zv"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="nAF-jW-Rb4" firstAttribute="top" secondItem="WHl-b4-IN2" secondAttribute="bottom" constant="68" id="14O-bA-e1q"/>
+                            <constraint firstItem="F2D-fk-8Am" firstAttribute="top" secondItem="PZf-fG-uNf" secondAttribute="bottom" constant="20" id="78E-dZ-hgu"/>
+                            <constraint firstItem="WHl-b4-IN2" firstAttribute="centerX" secondItem="ofG-LG-hEs" secondAttribute="centerX" id="Bq4-s7-UQi"/>
+                            <constraint firstItem="F2D-fk-8Am" firstAttribute="leading" secondItem="ofG-LG-hEs" secondAttribute="leading" constant="20" id="Bvf-XE-VOv"/>
+                            <constraint firstAttribute="trailing" secondItem="F2D-fk-8Am" secondAttribute="trailing" constant="20" id="LMx-xG-FSD"/>
+                            <constraint firstAttribute="trailing" secondItem="PZf-fG-uNf" secondAttribute="trailing" constant="20" id="LUc-eG-aan"/>
+                            <constraint firstItem="WHl-b4-IN2" firstAttribute="top" secondItem="44Y-Cb-R2b" secondAttribute="bottom" constant="20" id="N1S-IU-hgu"/>
+                            <constraint firstItem="WHl-b4-IN2" firstAttribute="top" secondItem="44Y-Cb-R2b" secondAttribute="bottom" constant="20" id="Sr5-u9-aNC"/>
+                            <constraint firstItem="44Y-Cb-R2b" firstAttribute="top" secondItem="F2D-fk-8Am" secondAttribute="bottom" constant="20" id="UET-2y-449"/>
+                            <constraint firstItem="PZf-fG-uNf" firstAttribute="top" secondItem="KOP-8l-Odl" secondAttribute="bottom" constant="45" id="Vit-nG-AAc"/>
+                            <constraint firstItem="44Y-Cb-R2b" firstAttribute="leading" secondItem="ofG-LG-hEs" secondAttribute="leading" constant="20" id="kQD-8q-U1t"/>
+                            <constraint firstAttribute="trailing" secondItem="44Y-Cb-R2b" secondAttribute="trailing" constant="20" id="pDi-pY-XVZ"/>
+                            <constraint firstItem="F2D-fk-8Am" firstAttribute="top" secondItem="PZf-fG-uNf" secondAttribute="bottom" constant="20" id="qAf-vp-GYr"/>
+                            <constraint firstItem="44Y-Cb-R2b" firstAttribute="top" secondItem="F2D-fk-8Am" secondAttribute="bottom" constant="20" id="uK1-qH-izP"/>
+                            <constraint firstItem="PZf-fG-uNf" firstAttribute="leading" secondItem="ofG-LG-hEs" secondAttribute="leading" constant="20" id="xtf-8w-aLS"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="commentsTextView" destination="Jsh-AL-0Ex" id="Djn-5V-ntx"/>
+                        <outlet property="detailsTextField" destination="TBm-Pz-56G" id="pg2-KN-9tp"/>
+                        <outlet property="statusTextField" destination="e4M-xq-ail" id="9Xp-R0-Vxa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="o66-Lr-BHd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3243" y="382"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5uP-R8-bV0">
@@ -343,6 +503,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="logout" width="32" height="32"/>
         <image name="route" width="64" height="64"/>
         <image name="signature" width="64" height="64"/>
     </resources>
