--- a/RoutePro/Base.lproj/Main.storyboard
+++ b/RoutePro/Base.lproj/Main.storyboard
@@ -378,18 +378,7 @@
                             <constraint firstAttribute="trailing" secondItem="7Q8-1m-HqO" secondAttribute="trailing" id="s7s-EB-BIT"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="mdj-sH-fwE">
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="6h7-dx-W8A">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="hbH-jA-czb">
-                                <rect key="frame" x="548" y="6" width="32" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="logout"/>
-                                <connections>
-                                    <action selector="logout:" destination="mQZ-Mg-ywX" eventType="touchUpInside" id="nlq-m5-IeX"/>
-                                </connections>
-                            </button>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="mdj-sH-fwE"/>
                     <connections>
                         <outlet property="detailTableView" destination="7Q8-1m-HqO" id="aKs-D9-0I6"/>
                         <segue destination="Hsv-rJ-Kyx" kind="show" identifier="detailSegue" id="Gmi-Jh-csG"/>
